intelligenceSection is done

--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
         </div>
     </section>
 
-    <section class="preperty">
+    <section class="property">
         <div class="container">
             <div class="property__title">
                 У вас в собственности<br><span>ликвидный актив</span>
@@ -764,6 +764,123 @@
                         Люди и компании начинают экономить и переезжают в более маленькие площад (квартиры, офисы). Лишнего места для всех вещей не остается и они в поиске склада для хранения вещей по выгодной цене
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="stability">
+        <div class="container">
+            <div class="stability__title">
+                Инвестиции в Boxrent Это:
+            </div>
+            <div class="stability__items">
+                <div class="stability__item">
+                    <img src="img/stabilitySection/1img.svg" alt="StabilitySection1Img" class="stability__img">
+                    <div class="stability__subtitle">
+                        Эжемесячные выплаты инвестору
+                    </div>
+                    <div class="stability__descr">
+                        Инвесторы стабильно получают прибыль с аренды каждый месяц до 15 числа
+                    </div>
+                </div>
+                <div class="stability__item">
+                    <img src="img/stabilitySection/2img.svg" alt="StabilitySection2Img" class="stability__img">
+                    <div class="stability__subtitle">
+                        Стабильность
+                    </div>
+                    <div class="stability__descr">
+                        Boxrent управляет активами в размере ≈ 300 000 €  в 2 странах Балтии, имеет активную базу арендаторов которая с каждым месяцем увеличивается
+                    </div>
+                </div>
+                <div class="stability__item">
+                    <img src="img/stabilitySection/3img.svg" alt="StabilitySection3Img" class="stability__img">
+                    <div class="stability__subtitle">
+                        Деверсификация
+                    </div>
+                    <div class="stability__descr">
+                        Деверсификация не только между разных локаций и городов, но и между типов клиентов - большие размеры арендуют компании, маленькие используют для личного хранения
+                    </div>
+                </div>
+                <div class="stability__item">
+                    <img src="img/stabilitySection/4img.svg" alt="StabilitySection4Img" class="stability__img">
+                    <div class="stability__subtitle">
+                        Пассивный заработок
+                    </div>
+                    <div class="stability__descr">
+                        Маркетинг, работа с должниками, уход за вашими контейнерами - все бизнес процесы мы полностью берем на себя
+                    </div>
+                </div>
+                <div class="stability__item">
+                    <img src="img/stabilitySection/5img.svg" alt="StabilitySection5Img" class="stability__img">
+                    <div class="stability__subtitle">
+                        Оберегире деньги  от инфляции
+                    </div>
+                    <div class="stability__descr">
+                        С процентами которые предлагают банковские депозиты, Вы теряете. Наша компания как и другие с каждым годом увеличивает аренду. За прошлый год в Европе цена на склады увеличилась на 7%
+                    </div>
+                </div>
+                <div class="stability__item">
+                    <img src="img/stabilitySection/6img.svg" alt="StabilitySection6Img" class="stability__img">
+                    <div class="stability__subtitle">
+                        Инвестируйте удалённо
+                    </div>
+                    <div class="stability__descr">
+                        Вы можете придти на чай в любое время по адресу Braslas iela 29a, Riga, LV-1009. Но также можете инвестировать удаленно с любой точки мира
+                    </div>
+                </div>
+                <div class="stability__item">
+                    <img src="img/stabilitySection/7img.svg" alt="StabilitySection7Img" class="stability__img">
+                    <div class="stability__subtitle">
+                        Низкий порог входа
+                    </div>
+                    <div class="stability__descr">
+                        Возсожность убедиться в бизнес модели с относительно низкой суммой
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="intelligence">
+        <div class="container">
+            <div class="intelligence__mainTitle">
+                Сравнения со сдачей квартиры
+            </div>
+            <div class="intelligence__blocks">
+                <div class="intelligence__block">
+                    <div class="intelligence__title"></div>
+                    <div class="intelligence__title intelligence__border">Ликвидный актив</div>
+                    <div class="intelligence__title intelligence__f9 intelligence__border">Порог входа</div>
+                    <div class="intelligence__title">Управления</div>
+                    <div class="intelligence__title intelligence__f9">Ремонты</div>
+                    <div class="intelligence__title"></div>
+                    <div class="intelligence__title intelligence__border">Рост стоимости</div>
+                    <div class="intelligence__title intelligence__border intelligence__border_bottom">Возврат</div>
+                </div>
+                <div class="intelligence__block">
+                    <div class="intelligence__block_title">Сдача квартиры в долгий срок</div>
+                    <div class="intelligence__item intelligence__border535">Да</div>
+                    <div class="intelligence__item intelligence__f9">≈ 35 000 €</div>
+                    <div class="intelligence__item">Вы ищете арендаторов, <br> контролируете их оплаты, и тд.</div>
+                    <div class="intelligence__item intelligence__f9">Косметический ремонт раз в 5-8 лет. <br> Занимаетесь вы.</div>
+                    <div class="intelligence__item"></div>
+                    <div class="intelligence__item">В среднем 5,3% в год</div>
+                    <div class="intelligence__item intelligence__f6">6-9% в год</div>
+                </div>
+                <div class="intelligence__block">
+                    <div class="intelligence__block_title"><span>Инвестиция в контейнер</span></div>
+                    <div class="intelligence__item intelligence__border535">Да</div>
+                    <div class="intelligence__item intelligence__fef3f5 intelligence__item_bold">5 000 €</div>
+                    <div class="intelligence__item intelligence__item_bold">Полностью пассивно. <br> Всем занимаемся мы.</div>
+                    <div class="intelligence__item intelligence__fef3f5 intelligence__item_bold">Подкрасить, заварить - раз в 2-5 лет. <br> Занимаемся мы.</div>
+                    <div class="intelligence__item"></div>
+                    <div class="intelligence__item">В среднем 15% в год</div>
+                    <div class="intelligence__item intelligence__fef3f5">15-17% в год</div>
+                </div>
+            </div>
+            <div class="intelligence__footer">
+                <div class="intelligence__question">Есть вопросы?</div>
+                <a href="tel:+37125355524" class="intelligence__number">+371 253 555 24</a>
             </div>
         </div>
     </section>
