classicSection is progress

--- a/index.html
+++ b/index.html
@@ -884,5 +884,61 @@
             </div>
         </div>
     </section>
+
+    <section class="classic">
+        <div class="container">
+            <div class="classic__mainTitle">
+                Сравнения с классическим<br>центром самообслуживания
+            </div>
+            <div class="classic__tag">
+                Для бизнеса
+            </div>
+            <div class="classic__table classic__table1">
+                <div class="classic__block">
+                    <div class="classic__title"></div>
+                    <div class="classic__item">Согласование</div>
+                    <div class="classic__item">Масштабирование</div>
+                    <div class="classic__item">Гибкость выбора с<br>наибольшим спросом</div>
+                    <div class="classic__item">Мобильность</div>
+                </div>
+                <div class="classic__block">
+                    <div class="classic__title">Центр складов самообслуживания</div>
+                    <div class="classic__item">Необходим проект + согласование<br>
+                        строительства</div>
+                    <div class="classic__item">
+                        <div class="classic__item-title">Высокий риск</div>
+                        <div class="classic__item-subtitle">Масштабирование происходит только построив новый центр в новой лакации</div>
+                    </div>
+                    <div class="classic__item">
+                        <div class="classic__item-title">Не эффективно</div>
+                        <div class="classic__item-subtitle">Выбор размеров складов базируетсяна изследовании рынка</div>
+                    </div>
+                    <div class="classic__item">Нету</div>
+                    <div class="classic__item">
+                        <img src="img/classicSection/tableImg1.png" alt="tableImg1" class="classic__img">
+                    </div>
+                </div>
+                <div class="classic__block">
+                    <div class="classic__title">Склады из контейнеров</div>
+                    <div class="classic__item">Согласование не нужно. Контейнер считается временной конструкцией</div>
+                    <div class="classic__item">
+                        <div class="classic__item-title">Минимум риска</div>
+                        <div class="classic__item-subtitle">Мы строим склады поэтапно в зависимости от спроса. Платим только за использованную землю.</div>
+                    </div>
+                    <div class="classic__item">
+                        <div class="classic__item-title">Очень гибкие</div>
+                        <div class="classic__item-subtitle">Поэтапное строительство. После каждого этапа владеем информацией спроса на определенные размеры. Строим под реальный спрос в моменте</div>
+                    </div>
+                    <div class="classic__item">
+                        <div class="classic__item-title">Мобильны</div>
+                        <div class="classic__item-subtitle">В случае изменения ситуации на рынке, падения спроса в определенной локации, транспортировка 1 контейнера равна месячной прибыли этого контейнера</div>
+                    </div>
+                    <div class="classic__item">
+                        <img src="img/classicSection/tableImg2.png" alt="tableImg2" class="classic__img">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
