classicSection, growthSection is done; selfSection is progress.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BoxRent</title>
     
-    <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -896,45 +895,170 @@
             <div class="classic__table classic__table1">
                 <div class="classic__block">
                     <div class="classic__title"></div>
-                    <div class="classic__item">Согласование</div>
-                    <div class="classic__item">Масштабирование</div>
-                    <div class="classic__item">Гибкость выбора с<br>наибольшим спросом</div>
-                    <div class="classic__item">Мобильность</div>
+                    <div class="classic__title">Согласование</div>
+                    <div class="classic__title">Масштабирование</div>
+                    <div class="classic__title">Гибкость выбора с<br>наибольшим спросом</div>
+                    <div class="classic__title">Мобильность</div>
                 </div>
                 <div class="classic__block">
-                    <div class="classic__title">Центр складов самообслуживания</div>
+                    <div class="classic__title classic__title_p40">Центр складов самообслуживания</div>
                     <div class="classic__item">Необходим проект + согласование<br>
                         строительства</div>
-                    <div class="classic__item">
-                        <div class="classic__item-title">Высокий риск</div>
-                        <div class="classic__item-subtitle">Масштабирование происходит только построив новый центр в новой лакации</div>
+                    <div class="classic__item f6">
+                        <div class="classic__item_title">Высокий риск</div>
+                        <div class="classic__item_subtitle">Масштабирование происходит только построив новый центр в новой лакации</div>
                     </div>
                     <div class="classic__item">
-                        <div class="classic__item-title">Не эффективно</div>
-                        <div class="classic__item-subtitle">Выбор размеров складов базируетсяна изследовании рынка</div>
+                        <div class="classic__item_title">Не эффективно</div>
+                        <div class="classic__item_subtitle">Выбор размеров складов базируетсяна изследовании рынка</div>
                     </div>
-                    <div class="classic__item">Нету</div>
-                    <div class="classic__item">
+                    <div class="classic__item f6 classic__item_bold">Нету</div>
+                    <div class="classic__item classic__item_noPadding">
                         <img src="img/classicSection/tableImg1.png" alt="tableImg1" class="classic__img">
                     </div>
                 </div>
                 <div class="classic__block">
-                    <div class="classic__title">Склады из контейнеров</div>
+                    <div class="classic__title classic__title_p40">Склады из контейнеров</div>
                     <div class="classic__item">Согласование не нужно. Контейнер считается временной конструкцией</div>
-                    <div class="classic__item">
-                        <div class="classic__item-title">Минимум риска</div>
-                        <div class="classic__item-subtitle">Мы строим склады поэтапно в зависимости от спроса. Платим только за использованную землю.</div>
+                    <div class="classic__item f6">
+                        <div class="classic__item_title">Минимум риска</div>
+                        <div class="classic__item_subtitle">Мы строим склады поэтапно в зависимости от спроса. Платим только за использованную землю.</div>
                     </div>
                     <div class="classic__item">
-                        <div class="classic__item-title">Очень гибкие</div>
-                        <div class="classic__item-subtitle">Поэтапное строительство. После каждого этапа владеем информацией спроса на определенные размеры. Строим под реальный спрос в моменте</div>
+                        <div class="classic__item_title">Очень гибкие</div>
+                        <div class="classic__item_subtitle">Поэтапное строительство. После каждого этапа владеем информацией спроса на определенные размеры. Строим под реальный спрос в моменте</div>
                     </div>
-                    <div class="classic__item">
-                        <div class="classic__item-title">Мобильны</div>
-                        <div class="classic__item-subtitle">В случае изменения ситуации на рынке, падения спроса в определенной локации, транспортировка 1 контейнера равна месячной прибыли этого контейнера</div>
+                    <div class="classic__item f6">
+                        <div class="classic__item_title">Мобильны</div>
+                        <div class="classic__item_subtitle">В случае изменения ситуации на рынке, падения спроса в определенной локации, транспортировка 1 контейнера равна месячной прибыли этого контейнера</div>
                     </div>
-                    <div class="classic__item">
+                    <div class="classic__item classic__item_noPadding">
                         <img src="img/classicSection/tableImg2.png" alt="tableImg2" class="classic__img">
+                    </div>
+                </div>
+            </div>
+            <div class="classic__tag classic__tag2">Для клиентов</div>
+            <div class="classic__table classic__table2">
+                <div class="classic__block classic__block2">
+                    <div class="classic__title2"></div>
+                    <div class="classic__title">Удобства</div>
+                    <div class="classic__title">Цены</div>
+                </div>
+                <div class="classic__block classic__block2">
+                    <div class="classic__title2"></div>
+                    <div class="classic__item">От авто до склада нужно нести<br>вещи, от ≈ 20 до 60 метров</div>
+                    <div class="classic__item f6">Дорого <br> <span>9-20€/m2</span></div>
+                </div>
+                <div class="classic__block classic__block2">
+                    <div class="classic__title2"></div>
+                    <div class="classic__item">Подъезда прямо к складу<br>на грузовой и легковой машине</div>
+                    <div class="classic__item f6">Выгодно<br><span>4-13€/m2</span></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="growth">
+        <div class="container">
+            <div class="growth__title">Рост рынка в Европе</div>
+            <div class="growth__subtitle">
+                Сфера Self Storage в Европе относительно молодая и на данный момент рынок очень активно<br>развивается. Мы предлагаем Вам присоидиниться к этому быстро растущему рынку.
+            </div>
+            <div class="growth__block">
+                <div class="growth__item">
+                    <div>
+                        <img src="img/growthSection/growthImg1.svg" alt="growthImg1" class="growth__img">
+                    </div>
+                    <div class="growth__descr">
+                        В США каждый 10-ый пользуется<br>складом самообслуживания
+                    </div>
+                </div>
+                <div class="growth__item">
+                    <div>
+                        <img src="img/growthSection/growthImg2.svg" alt="growthImg2" class="growth__img">
+                    </div>
+                    <div class="growth__descr">
+                        В Европе только каждый 110-й...
+                    </div>
+                </div>
+            </div>
+            <div class="growth__block2">
+                <div class="growth__tag">+ 81%</div>
+                <div class="growth__text">Столько новых компаний складов
+                самообслуживания построили в Европе
+                за последние <span>4 года*</span>
+                </div>
+                <div class="growth__warning">*За период 2016-2022. Данные взяты <a href="#" class="growth__link">тут</a></div>
+                <img src="img/growthSection/box.png" alt="growthBox" class="growth__mainImg">
+            </div>
+        </div>
+    </section>
+
+    <section class="self">
+        <div class="container">
+            <div class="self__block">
+                <div class="self__item">
+                    <div class="self__title">Развитие Self Storage в Европе</div>
+                    <div class="self__subtitles">
+                        <div class="self__subtitle">Примерное число компаний в сфере Self Storage</div>
+                        <div class="self__subtitle self__subtitle_red">Средняя заполняемость</div>
+                    </div>
+                    <div class="self__imgBlock">
+                        <img src="img/selfSection/Group 20335.svg" alt="selfSectionGraphic" class="self__mainImg">
+                    </div>
+                </div>
+                <div class="self__item">
+                    <div class="self__redBlock">Склады самообслуживания-<br>перспективный рынок</div>
+                    <div class="self__title self__title_mt45">Материалы</div>
+                    <div class="self__files">
+                        <div class="self__file">
+                            <a href="img/selfSection/Group 20335.svg" download="" class="self__link">
+                                <img src="img/selfSection/pdf.svg" alt="pdfLink">
+                            </a>
+                            <div class="self__file_descr">Fedessa отчет Европы 2014</div>
+                        </div>
+                        <div class="self__file">
+                            <a href="img/selfSection/Group 20335.svg" download="" class="self__link">
+                                <img src="img/selfSection/pdf.svg" alt="pdfLink">
+                            </a>
+                            <div class="self__file_descr">Fedessa отчет Европы 2015</div>
+                        </div>
+                        <div class="self__file">
+                            <a href="img/selfSection/Group 20335.svg" download="" class="self__link">
+                                <img src="img/selfSection/pdf.svg" alt="pdfLink">
+                            </a>
+                            <div class="self__file_descr">Fedessa отчет Европы 2016</div>
+                        </div>
+                        <div class="self__file">
+                            <a href="img/selfSection/Group 20335.svg" download="" class="self__link">
+                                <img src="img/selfSection/pdf.svg" alt="pdfLink">
+                            </a>
+                            <div class="self__file_descr">Fedessa отчет Европы 2017</div>
+                        </div>
+                        <div class="self__file">
+                            <a href="img/selfSection/Group 20335.svg" download="" class="self__link">
+                                <img src="img/selfSection/pdf.svg" alt="pdfLink">
+                            </a>
+                            <div class="self__file_descr">Fedessa отчет Европы 2018</div>
+                        </div>
+                        <div class="self__file">
+                            <a href="img/selfSection/Group 20335.svg" download="" class="self__link">
+                                <img src="img/selfSection/pdf.svg" alt="pdfLink">
+                            </a>
+                            <div class="self__file_descr">Fedessa отчет Европы 2019</div>
+                        </div>
+                        <div class="self__file">
+                            <a href="img/selfSection/Group 20335.svg" download="" class="self__link">
+                                <img src="img/selfSection/pdf.svg" alt="pdfLink">
+                            </a>
+                            <div class="self__file_descr">Fedessa отчет Европы 2020</div>
+                        </div>
+                        <div class="self__file">
+                            <a href="img/selfSection/Group 20335.svg" download="" class="self__link">
+                                <img src="img/selfSection/pdf.svg" alt="pdfLink">
+                            </a>
+                            <div class="self__file_descr">Fedessa отчет Европы 2021</div>
+                        </div>
                     </div>
                 </div>
             </div>
