selfSection is done

--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@
     <section class="self">
         <div class="container">
             <div class="self__block">
-                <div class="self__item">
+                <div class="self__item self__item_noBefore">
                     <div class="self__title">Развитие Self Storage в Европе</div>
                     <div class="self__subtitles">
                         <div class="self__subtitle">Примерное число компаний в сфере Self Storage</div>
@@ -1007,7 +1007,7 @@
                         <img src="img/selfSection/Group 20335.svg" alt="selfSectionGraphic" class="self__mainImg">
                     </div>
                 </div>
-                <div class="self__item">
+                <div class="self__item self__item_noBefore">
                     <div class="self__redBlock">Склады самообслуживания-<br>перспективный рынок</div>
                     <div class="self__title self__title_mt45">Материалы</div>
                     <div class="self__files">
@@ -1061,6 +1061,34 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="self__title self__title2">
+                Средняя заполняемость всех складов
+            </div>
+            <div class="self__wall">
+                <div class="self__items">
+                    <div class="self__item self__item_1">0%-49.9%</div>
+                    <div class="self__item self__item_2">50%-79.9%</div>
+                    <div class="self__item self__item_3">80%-84.9%</div>
+                    <div class="self__item self__item_4">85%-89.9%</div>
+                    <div class="self__item self__item_5">90%-94.9%</div>
+                    <div class="self__item self__item_6">95%-100%</div>
+                </div>
+                <div class="self__cards">
+                    <div class="self__card self__card_1">4%</div>
+                    <div class="self__card self__card_2">24%</div>
+                    <div class="self__card self__card_3">26%</div>
+                    <div class="self__card self__card_4">28%</div>
+                    <div class="self__card self__card_5">14%</div>
+                    <div class="self__card self__card_6">4%</div>
+                </div>
+            </div>
+            <div class="self__turbo">
+                <div class="self__turbo_text">
+                    Присоединяйся к быстро<span>растущему рынку вместе с Boxrent!</span>
+                    <img src="img/selfSection/Rocket.svg" alt="Rocket" class="self__turbo_img">
+                </div>
+                
             </div>
         </div>
     </section>
