request section is done

--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,32 @@
                     Присоединяйся к быстро<span>растущему рынку вместе с Boxrent!</span>
                     <img src="img/selfSection/Rocket.svg" alt="Rocket" class="self__turbo_img">
                 </div>
-                
+            </div>
+        </div>
+    </section>
+
+    <section class="request">
+        <div class="container">
+            <div class="request__blocks">
+                <div class="request__block">
+                    <div class="request__title">Оставьте <br> заявку</div>
+                    <div class="request__subtitle">И мы свяжемся с Вами <br> в ближайшее время</div>
+                </div>
+                <div class="request__block">
+                    <form action="#" class="request__form">
+                        <div class="request__inputs">
+                            <input placeholder="Ваше имя" type="text" class="request__name">
+                            <input placeholder="Ваш номер телефона" type="number" class="request__nmb">
+                            <input placeholder="Ваш e-mail" type="email" class="request__email">
+                        </div>
+                        <div>
+                            <textarea placeholder="Комментарии" name="#" class="request__comment" id="#"></textarea>
+                        </div>
+                        <div>
+                            <a href="#" class="request__btn">Отправить заявку</a>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
