questionsSection is progress

--- a/index.html
+++ b/index.html
@@ -1117,5 +1117,56 @@
             </div>
         </div>
     </section>
+
+    <section class="questions">
+        <div class="container">
+            <div class="questions__title">Остались вопросы?</div>
+
+            <div class="questions__blocks">
+                <div class="questions__block">
+                    <div class="questions__subtitle">
+                        Вопрос
+                        <a href="#" class="questions__plus">
+                            <svg 
+                                width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M10.5738 0.75H10.3238V1V10.3238H1H0.75V10.5738V11.4262V11.6762H1H10.3238V21V21.25H10.5738H11.4262H11.6762V21V11.6762H21H21.25V11.4262V10.5738V10.3238H21H11.6762V1V0.75H11.4262H10.5738Z" fill="#000" stroke="#000" stroke-width="0.5"/>
+                            </svg>
+                        </a> 
+                    </div>
+                    <div class="questions__descr">
+                        Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев<br>более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить<br>навык публичных выступлений в домашних условиях.
+                    </div>
+                </div>
+                <div class="questions__block">
+                    <div class="questions__subtitle questions__subtitle_dBlock">
+                        Вопрос
+                        <a href="#" class="questions__plus questions__plus_dBlock">
+                            <svg 
+                                width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M10.5738 0.75H10.3238V1V10.3238H1H0.75V10.5738V11.4262V11.6762H1H10.3238V21V21.25H10.5738H11.4262H11.6762V21V11.6762H21H21.25V11.4262V10.5738V10.3238H21H11.6762V1V0.75H11.4262H10.5738Z" fill="#000" stroke="#000" stroke-width="0.5"/>
+                            </svg>
+                        </a> 
+                    </div>
+                    <div class="questions__descr questions__descr_dBlock">
+                        Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев<br>более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить<br>навык публичных выступлений в домашних условиях.
+                    </div>
+                </div>
+                <div class="questions__block questions__block_bb">
+                    <div class="questions__subtitle">
+                        Вопрос
+                        <a href="#" class="questions__plus">
+                            <svg 
+                                width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M10.5738 0.75H10.3238V1V10.3238H1H0.75V10.5738V11.4262V11.6762H1H10.3238V21V21.25H10.5738H11.4262H11.6762V21V11.6762H21H21.25V11.4262V10.5738V10.3238H21H11.6762V1V0.75H11.4262H10.5738Z" fill="#000" stroke="#000" stroke-width="0.5"/>
+                            </svg>
+                        </a>   
+                    </div>
+                    <div class="questions__descr">
+                        Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев<br>более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить<br>навык публичных выступлений в домашних условиях.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
